# pdgraph-bench

./: .gitignore  Dockerfile.cluster  LICENSE  Makefile  README.md  docker-compose.cluster.yaml  docker-compose.scaleout.yaml  pyproject.toml
analysis/: __init__.py
analysis/plots/: __init__.py  latency_cdf.py  scaleout_timeline.py  style.py  throughput_bar.py
analysis/reports/: __init__.py  generate_report.py  paper_figures.py
analysis/stats/: __init__.py  interference.py  latency.py  scaleout.py  throughput.py
configs/inventory/: cluster.yaml.example  cluster.yaml.playground
configs/scenarios/: demo-cluster.yaml  playground-s1.yaml  playground-s5.yaml  s1.yaml  s2.yaml  s3.yaml  s4.yaml  s5.yaml
configs/systems/: arangodb.yaml  dgraph.yaml  hugegraph.yaml  janusgraph.yaml  memgraph.yaml  nebulagraph-demo.yaml  nebulagraph-playground.yaml  nebulagraph.yaml  orientdb.yaml
configs/workloads/: finbench.yaml  snb_analytical.yaml  snb_bi.yaml  snb_iv2-playground.yaml  snb_iv2.yaml  synthetic_snb.yaml
data/generators/: Dockerfile.finbench  README.md  ldbc_finbench_datagen.sh  ldbc_snb_datagen.sh  synthetic_snb.py
data/loaders/: README.md  __init__.py  _finbench_v2.py  _gremlin_common.py  _ldbc_common.py  _ldbc_snb_v2.py  arangodb.py  dgraph.py  ldbc_finbench_arangodb.py  ldbc_finbench_dgraph.py  ldbc_finbench_nebulagraph.py  ldbc_snb_arangodb.py  ldbc_snb_dgraph.py  ldbc_snb_hugegraph.py  ldbc_snb_janusgraph.py  ldbc_snb_memgraph.py  ldbc_snb_nebulagraph.py  ldbc_snb_orientdb.py  nebulagraph.py
data/validators/: README.md  __init__.py  ldbc_finbench_validator.py  ldbc_snb_validator.py  runner.py  synthetic_snb_validator.py
deploy/cloud-init/: install-docker.sh
deploy/fabric/: fabfile.py
scripts/: _debug_hosts.py  gcp-deploy.sh  gcp-teardown.sh  run-full-campaign.sh  setup-cluster.sh  setup-nebulagraph.sh
src/graph_bench/: __init__.py  cli.py
tests/: conftest.py
tests/integration/: test_scenario_runner.py
tests/unit/: __init__.py  test_config.py  test_domain.py  test_mock_driver.py  test_orchestration.py
(+68 files in other folders)
